# cerberus

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  PLAN.md  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/cerberus-app/: Cargo.toml
crates/cerberus-app/src/: lib.rs  main.rs  timings.rs
crates/cerberus-chrome/: Cargo.toml
crates/cerberus-chrome/src/: lib.rs
crates/cerberus-consent/: Cargo.toml
crates/cerberus-consent/src/: lib.rs  psl.rs
crates/cerberus-crypto/: Cargo.toml
crates/cerberus-crypto-rustcrypto/: Cargo.toml
crates/cerberus-crypto-rustcrypto/src/: lib.rs
crates/cerberus-crypto/src/: lib.rs
crates/cerberus-css/: Cargo.toml
crates/cerberus-css/src/: color.rs  lib.rs  parser.rs
crates/cerberus-dns-doh/: Cargo.toml
crates/cerberus-dns-doh/src/: lib.rs
crates/cerberus-dom/: Cargo.toml
crates/cerberus-dom/src/: lib.rs
crates/cerberus-farbling/: Cargo.toml
crates/cerberus-farbling/src/: lib.rs
crates/cerberus-headless/: Cargo.toml
crates/cerberus-headless/src/: encode.rs  lib.rs
crates/cerberus-identity/: Cargo.toml
crates/cerberus-identity/src/: lib.rs
crates/cerberus-image/: Cargo.toml
crates/cerberus-image/src/: lib.rs
crates/cerberus-js/: Cargo.toml
crates/cerberus-js-dom/: Cargo.toml
crates/cerberus-js-dom/src/: json.rs  lib.rs
crates/cerberus-js-dom/tests/: engine_round_trip.rs  farbling.rs
crates/cerberus-js-quickjs/: Cargo.toml
crates/cerberus-js-quickjs/src/: lib.rs
crates/cerberus-js/src/: lib.rs
crates/cerberus-layout/: Cargo.toml
crates/cerberus-layout/src/: lib.rs
crates/cerberus-net/: Cargo.toml
crates/cerberus-net/src/: cache.rs  engine.rs  http1.rs  lib.rs
crates/cerberus-paint/: Cargo.toml
crates/cerberus-paint/src/: lib.rs
crates/cerberus-shell/: Cargo.toml
crates/cerberus-shell-winit/: Cargo.toml
crates/cerberus-shell-winit/src/: lib.rs
crates/cerberus-shell/src/: lib.rs
crates/cerberus-storage/: Cargo.toml
crates/cerberus-storage/src/: cookie.rs  disk.rs  lib.rs  policy.rs  rand.rs  vault.rs
crates/cerberus-style/: Cargo.toml
crates/cerberus-style/src/: lib.rs
crates/cerberus-text/: Cargo.toml
crates/cerberus-text/src/: lib.rs
crates/cerberus-tls-rustls/: Cargo.toml
crates/cerberus-tls-rustls/src/: lib.rs
crates/cerberus-types/: Cargo.toml
crates/cerberus-types/src/: lib.rs
crates/cerberus-ui/: Cargo.toml
crates/cerberus-ui/src/: lib.rs
crates/cerberus-url/: Cargo.toml
crates/cerberus-url/src/: lib.rs
docs/: REPRODUCIBLE.md  THREAT_MODEL.md
docs/adr/: 0001-architecture-and-trait-boundaries.md  0002-js-engine.md  0003-dependency-policy.md  0004-windowing.md  0005-rendering-stack.md  0006-networking.md  0007-css-engine.md  0008-page-scripts-dom-bridge.md  0009-svg-rasterization.md  0010-vault-format-and-profile-layout.md  0011-cookie-dispositions-and-timing-hud.md  0012-persistent-realm-and-incremental-sync.md  0013-bounded-event-loop.md  README.md
