[package]
name = "cerberus-app"
description = "Composition root: wires the subsystem seams, runs the trivial render and the memory gate."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cerberus-types = { path = "../cerberus-types" }
cerberus-url = { path = "../cerberus-url" }
cerberus-chrome = { path = "../cerberus-chrome" }
cerberus-net = { path = "../cerberus-net" }
cerberus-dom = { path = "../cerberus-dom" }
cerberus-paint = { path = "../cerberus-paint" }
cerberus-layout = { path = "../cerberus-layout" }
cerberus-storage = { path = "../cerberus-storage" }
cerberus-consent = { path = "../cerberus-consent" }
cerberus-farbling = { path = "../cerberus-farbling" }
cerberus-js = { path = "../cerberus-js" }
cerberus-identity = { path = "../cerberus-identity" }
cerberus-shell = { path = "../cerberus-shell" }
cerberus-headless = { path = "../cerberus-headless" }
