[package]
name = "cerberus-consent"
description = "Third-party detection, default-deny policy, consent events, and a rule store."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cerberus-types = { path = "../cerberus-types" }
