[package]
publish = false
name = "cerberus-crypto-rustcrypto"
description = "RustCrypto adapters behind the Aead/Kdf seams: XChaCha20-Poly1305 and Argon2id (ADR-0003, approved at M4)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cerberus-crypto = { path = "../cerberus-crypto" }
# Approved vault primitives (ADR-0003): audited RustCrypto implementations.
# XChaCha20-Poly1305: 24-byte nonces make random-nonce-per-blob safe at rest.
chacha20poly1305 = "0.10"
# Argon2id, as the threat model mandates for the passphrase KDF.
argon2 = "0.5"
