[package]
name = "cerberus-crypto"
description = "Crypto seams: Aead and Kdf traits plus zeroizing key material. No primitives implemented here."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true
