[package]
name = "cerberus-css"
description = "Our CSS engine (CssEngine: StyleEngine): parser, selectors, cascade, UA stylesheet. No deps."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cerberus-types = { path = "../cerberus-types" }
cerberus-dom = { path = "../cerberus-dom" }
cerberus-style = { path = "../cerberus-style" }
