[package]
name = "cerberus-dns-doh"
description = "DnsResolver adapter: DNS-over-HTTPS (RFC 8484 wire format), Quad9 default (ADR-0006)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cerberus-net = { path = "../cerberus-net" }
