[package]
name = "cerberus-js-quickjs"
description = "QuickJS adapter: implements the JsEngine seam over rquickjs (bundled), with speed-first delay neutralization (ADR-0002)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cerberus-js = { path = "../cerberus-js" }
cerberus-types = { path = "../cerberus-types" }
rquickjs = "0.9"
