[package]
publish = false
name = "cerberus-layout"
description = "The LayoutEngine seam plus a block/inline flow over a styled tree."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cerberus-types = { path = "../cerberus-types" }
cerberus-paint = { path = "../cerberus-paint" }
cerberus-style = { path = "../cerberus-style" }
cerberus-dom = { path = "../cerberus-dom" }

[dev-dependencies]
cerberus-css = { path = "../cerberus-css" }
