[package]
publish = false
name = "cerberus-net"
description = "Networking traits (TlsProvider, DnsResolver, HttpClient) plus a built-in page client."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cerberus-types = { path = "../cerberus-types" }
cerberus-url = { path = "../cerberus-url" }
