[package]
name = "cerberus-paint"
description = "Paint traits (Rasterizer, TextShaper, ImageDecoder), display list, and framebuffer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cerberus-types = { path = "../cerberus-types" }
