[package]
publish = false
name = "cerberus-shell-winit"
description = "Windowing adapter: drives a FrameApp in a real window via winit + softbuffer (ADR-0004)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cerberus-types = { path = "../cerberus-types" }
cerberus-paint = { path = "../cerberus-paint" }
cerberus-shell = { path = "../cerberus-shell" }
winit = "0.30"
softbuffer = "0.4"
