[package]
name = "cerberus-shell"
description = "Platform surface seam (windowing abstraction) with a headless surface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cerberus-types = { path = "../cerberus-types" }
cerberus-paint = { path = "../cerberus-paint" }
