[package]
name = "cerberus-storage"
description = "One storage environment: instance-sealed cookies, cookie groups, quarantine state machine, vault."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cerberus-types = { path = "../cerberus-types" }
cerberus-crypto = { path = "../cerberus-crypto" }
