[package]
name = "cerberus-ui"
description = "The minimal browser UI: one toolbar (back/forward/refresh/stop/URL/head/settings)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cerberus-types = { path = "../cerberus-types" }
cerberus-paint = { path = "../cerberus-paint" }
