[package]
name = "cerberus-url"
description = "Bootstrapped URL parsing (minimal; full WHATWG handling is ours to build)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cerberus-types = { path = "../cerberus-types" }
